src/infrastructure/kubernetes/gateway-service/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gateway-ingress
  
spec:
  rules:
    - host: api.factoryfloor.local
  
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-gateway
              port:
                number: 80
